[package]
name = "warp-tracing-playground"
version = "0.1.0"
authors = ["kulkema <magnus.kulke@reach-now.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"
opentelemetry = { version = "0.13", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-jaeger = { version = "0.12", features = ["tokio"] }
opentelemetry-prometheus = "0.6"
tracing-opentelemetry = "0.12"
tracing-bunyan-formatter = "0.2.0"
prometheus = "0.12"
lazy_static = "1.4"

[profile.dev]
split-debuginfo = "unpacked"
